--- a/Hooli_stylePopup/hooli.css
+++ b/Hooli_stylePopup/hooli.css
@@ -36,7 +36,7 @@ a{
     width: 100%;
     height: 100px;
     display: flex;
-    
+    background-color: cadetblue;
     justify-content: end;
 }
 
